side nav markup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,5 +31,25 @@
         <i class="fa-solid fa-user fa-2xs"></i>
       </div>
     </div>
+    <div class="content">
+      <div class="side-nav">
+        <div class="add-button">
+          <i class="fa-solid fa-plus fa-xl"></i>
+          <p>New</p>
+        </div>
+        <div class="side-nav-tabs">
+          <i class="fa-solid fa-hard-drive fa-xs"></i>
+          <p>My Drive</p>
+        </div>
+        <div class="side-nav-tabs">
+          <i class="fa-regular fa-star fa-xs"></i>
+          <p>Starred</p>
+        </div>
+        <div class="side-nav-tabs">
+          <i class="fa-regular fa-trash-can fa-xs"></i>
+          <p>Trash</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
