--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,9 +3,11 @@
 }
 .top-nav {
   padding-top: 1%;
+  padding-bottom: 0.5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid lightgray;
 }
 
 .top-nav-left {
@@ -52,4 +54,40 @@
 }
 .fa-gear {
   margin-left: 10px;
+}
+
+/* side nav */
+.side-nav {
+  width: 14%;
+}
+.add-button {
+  margin-left: 5px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 60px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  border: 1px solid black;
+  border-radius: 20px;
+  font-size: 0.7em;
+}
+.side-nav-tabs {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.side-nav-tabs > i {
+  margin-right: 10px;
+  width: 10px;
+}
+.side-nav-tabs > p {
+  font-size: 0.6em;
+}
+.fa-star {
+  position: relative;
+  right: 1px;
 }
