--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/home.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/661ac17a3d.js"
       crossorigin="anonymous"
@@ -48,6 +54,17 @@
         <div class="side-nav-tabs">
           <i class="fa-regular fa-trash-can fa-xs"></i>
           <p>Trash</p>
+        </div>
+      </div>
+      <div class="main-content">
+        <div class="main-content-nav">
+          <div>
+            <p class="main-content-nav-title">My Drive</p>
+          </div>
+          <div class="main-content-nav-right">
+            <i class="fa-solid fa-list fa-2xs"></i>
+            <i class="fa-solid fa-circle-question fa-2xs"></i>
+          </div>
         </div>
       </div>
     </div>
