--- a/public/css/home.css
+++ b/public/css/home.css
@@ -98,6 +98,7 @@
   pointer-events: none;
 }
 .add-button-list {
+  width: 100%;
   display: flex;
   padding: 5px 0;
   padding-left: 10px;
@@ -150,4 +151,46 @@
 }
 .fa-circle-question {
   margin-left: 15px;
+}
+
+/* main content files */
+.main-content-files {
+  display: flex;
+  flex-direction: row;
+}
+.file-card {
+  width: 115px;
+  height: 130px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: flex-end; */
+  align-items: center;
+}
+.file-card:hover > div {
+  background-color: lightgray;
+}
+.file-card > a {
+  width: 100%;
+  height: 100%;
+  padding-top: 50%;
+  display: flex;
+  justify-content: center;
+}
+.file-card-name {
+  width: 100%;
+  height: 15%;
+  font-size: 0.5em;
+  display: flex;
+  align-items: center;
+  padding: 12% 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  pointer-events: none;
+}
+.fa-file {
+  padding: 0 8px;
 }
