--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,13 @@
         </div>
         <div class="add-button-lists">
           <form action="/index" method="POST">
-            <button type="submit" name="document" value="newDocument">
-              New File
+            <button
+              class="add-button-list"
+              type="submit"
+              name="document"
+              value="google-docs"
+            >
+              Google Docs
             </button>
           </form>
           <button class="add-button-list">New Folder</button>
@@ -78,9 +83,26 @@
             <i class="fa-solid fa-circle-question fa-2xs"></i>
           </div>
         </div>
-        <% documents.forEach((document) => { %>
-        <div><%= document %></div>
-        <% }) %>
+        <div class="main-content-files">
+          <% documents.forEach((document) => { %>
+          <div>
+            <div class="file-card">
+              <a href="/<%= document.id %>">
+                <i class="fa-solid fa-file-lines fa-2xl"></i>
+              </a>
+              
+              <div class="file-card-name">
+                <% if (document.type === "google-docs") { %>
+                  <i class="fa-solid fa-file"></i>
+                <% } %>
+                <p><%= document.title %></p>
+              </div>
+            </div>
+          </div>
+          <% }) %>
+        </div>
+        
+        
       </div>
     </div>
     <script src="/js/home.js"></script>
