--- a/views/document.ejs
+++ b/views/document.ejs
@@ -30,5 +30,6 @@
   <div class="document-text-area">
     <textarea name="" id="document-text-area" cols="30" rows="10"></textarea>
   </div>
+  <script src="/js/document.js" type="module"></script>
 </body>
 </html>
